public class Crew {
    private String name;
    private String position;
    private String staffNumber;
    
    public Crew(String name, String position, String staffNumber) {
        this.name = name;
        this.position = position;
        this.staffNumber = staffNumber;
    }

    public String getName() {
        return name;
    }

    public String getPosition() {
        return position;
    }

    public String getStaffNumber() {
        return staffNumber;
    }
    
    
}
